--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/OKHttp/jar_files/okio-2.4.3.jar"/>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/OKHttp/jar_files/okhttp-4.4.1.jar"/>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/OKHttp/jar_files/kotlin-stdlib-common-1.3.61.jar"/>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/OKHttp/jar_files/kotlin-stdlib-1.3.61.jar"/>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/OKHttp/jar_files/annotations-13.0.jar"/>
+	<classpathentry kind="lib" path="/media/joaodev/Estudo/JAVA/JSON 1.1/json-20220320.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
